# VLegal-Bench

./: .env_example  .gitignore  README.md  infer.sh  inference.py  pyproject.toml  vllm_serving.sh
1.1/: 1_1.jsonl  prompt_1_1.py
1.2/: 1_2.jsonl  prompt_1_2.py
1.3/: 1_3.jsonl  prompt_1_3.py
1.4/: 1_4.jsonl  prompt_1_4.py
1.5/: 1_5_legal_schema_recall_grounding_reformatted.jsonl  prompt_1_5.py
2.1/: 2_1.jsonl  prompt_2_1.py
2.2/: 2_2.jsonl  prompt_2_2.py
2.3/: 2_3.jsonl  prompt_2_3.py
2.4/: 2_4_legal_court_decision_prediction_verified_reformatted.jsonl  prompt_2_4.py
2.5/: 2_5_user_intent_understanding_reformatted.jsonl  intents.txt  prompt_2_5.py
3.1/: 3_1.jsonl  prompt_3_1.py
3.2/: 3_2.jsonl  prompt_3_2.py
3.3/: 3_3.jsonl  3_3_multihop_graph_reasoning_remove_content_verified_reformatted.jsonl  prompt_3_3.py
3.4/: 3_4_conflict_consistency_detection_remove_content_verified_reformatted.jsonl  3_4_conflict_consistency_detection_verified_reformatted.jsonl  prompt_3_4.py
3.5/: 3_5.jsonl  prompt_3_5.py
4.1/: prompt_4_1.py
4.2/: 4_2_judicial_reasoning_generation_reformatted.jsonl  prompt_4_2.py
4.3/: prompt_4_3.py
5.1/: 5_1_bias_detection_verified_reformatted.jsonl  prompt_5_1.py
5.2/: 5_2.jsonl  prompt_5_2.py
5.3_law_vs_ethics/: 5_3_law_vs_ethics_reformatted.jsonl  prompt_5_3_law_vs_ethics.py
5.3_legal_ethics_cases/: 5_3.jsonl  prompt_5_3_legal_ethics_cases.py
5.4/: 5_4.jsonl  prompt_5_4.py
src/: evaluation.py
templates/: blossom.jinja  llama2_7b.jinja  llama2_7b.json  seallm1_5.jinja  vlsp-qwen3-4b_no_reason.jinja
